udotool (2.4) UNRELEASED; urgency=medium

  * New low-level command `udotool option`.
  * New low-level command `udotool runtime`.
  * Removed all Tcl variables in favor of `udotool option` and `udotool runtime`.
  * Command line option `--quirk` renamed to `--quirks` for consistency.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Tue, 11 Mar 2025 02:03:30 +0300

udotool (2.3) unstable; urgency=medium

  * Low-level commands (`open` and Tcl-style `input`) are hidden under
    ensemble command `udotool`.
  * New low-level command `udotool close`.
  * New low-level command `udotool sysname`.
  * New low-level command `udotool protocol`.
  * Remove variable `::udotool::sys_name`.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Mon, 10 Mar 2025 23:13:57 +0300

udotool (2.2) unstable; urgency=medium

  * Now compiles with clang.
  * Option `--version` now also prints Jim Tcl version.
  * NEW: Quirks can now be set/unset at runtime.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Sun, 02 Mar 2025 16:11:21 +0300

udotool (2.1) unstable; urgency=medium

  * CHANGE: Instead of extending command `info`, use our own command `names`.
  * NEW: If command or script returns a result, print it in a human-friendly format.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Fri, 31 Jan 2025 22:23:48 +0300

udotool (2.0) unstable; urgency=medium

  * MAJOR CHANGE: Internal script language is replaced by Jim Tcl.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Thu, 30 Jan 2025 17:56:48 +0300

udotool (1.6) unstable; urgency=medium

  * NEW: Wait for settle time after device setup.
  * NEW: Option `--settle-time` to specify device settle time.
  * NEW: Use environment variables to override some defaults.
  * NEW: Environment variables `UDOTOOL_LOOP_COUNT` and `UDOTOOL_LOOP_RTIME` are set in a loop.
  * NEW: Command `break`.

 -- Alec Kojaev <alec.kojaev@gmail.com>  Mon, 11 Nov 2024 19:29:57 +0300

udotool (1.5) unstable; urgency=medium

  * NEW: Can now specify tweaks in addition to quirks.