@@ -4,6 +4,8 @@ udotool (2.4) UNRELEASED; urgency=medium
   * New low-level command `udotool runtime`.
   * Removed all Tcl variables in favor of `udotool option` and `udotool runtime`.
   * Command line option `--quirk` renamed to `--quirks` for consistency.
+  * Renamed command `names` to `udotool names`.
+  * New command line `--list-names`.
 
  -- Alec Kojaev <alec.kojaev@gmail.com>  Tue, 11 Mar 2025 02:03:30 +0300
 
